--- a/design.css
+++ b/design.css
@@ -168,13 +168,13 @@ nav a.active, nav a:hover {
 
 .home-content h1 {
     font-family: 'Playfair Display', serif;
-    font-size: 70px;
+    font-size: 50px;
     color: #343a40;
     line-height: 1.2;
 }
 
 .home-content p {
-    font-size: 40px;
+    font-size: 30px;
     white-space: normal;
     word-wrap: break-word;
     line-height: 1.4;
@@ -244,6 +244,7 @@ nav a.active, nav a:hover {
     min-height: 260px;
     padding: 30px;
     box-shadow: 6px 6px 0 #495057;
+    color: #ffffff; /* Sets text to white */
 }
 
 .skills-card ul {
@@ -251,7 +252,6 @@ nav a.active, nav a:hover {
     padding: 0;
     margin: 0;
 }
-
 .skills-card li {
     font-size: 18px;
     margin-bottom: 12px;
