--- a/design.css
+++ b/design.css
@@ -210,9 +210,9 @@ nav a.active, nav a:hover {
 
 /* SKILLS SECTION */
 #skills {
-    width: 100%;
-    background-color: #f1f3f5;
-    padding: 100px 0;
+    width: 120%;
+    background-color: transparent;
+    padding: 200px 0;
 }
 
 .skills-container {
@@ -252,6 +252,7 @@ nav a.active, nav a:hover {
     padding: 0;
     margin: 0;
 }
+
 .skills-card li {
     font-size: 18px;
     margin-bottom: 12px;
