--- a/design.css
+++ b/design.css
@@ -162,6 +162,7 @@ nav a.active, nav a:hover {
 /* Home Content Styling */
 .home-content {
     width: 100%;
+    max-width: 500px;
     margin-left: 20px;
 }
 
